[workspace]

members = [
    "zokrates_common",
    "zokrates_core",
    "zokrates_cli",
    "zokrates_fs_resolver",
    "zokrates_stdlib",
    "zokrates_embed",
    "zokrates_abi",
    "zokrates_test",
    "zokrates_core_test",
    "zokrates_solidity_test",
    "zokrates_ark",
    "zokrates_ast",
    "zokrates_interpreter",
    "zokrates_embed",
    "zokrates_bellman",
    "zokrates_proof_systems",
    "zokrates_js",
    "zokrates_circom"
]

exclude = []