[package]
name = "zokrates-cli"
version = "0.1.0"
authors = ["Jacob Eberhardt <jacob.eberhardt@tu-berlin.de>", "Dennis Kuhnert <mail@kyroy.com>", "Thibaut Schaeffer <thibaut@schaeff.fr>"]
repository = "https://github.com/JacobEberhardt/ZoKrates.git"

[features]
default = []
libsnark = ["zokrates/libsnark"]

[dependencies]
clap = "2.26.2"
bincode = "0.8.0"
regex = "0.2"
zokrates = { version = "0.1", path = "../zokrates" }

[dev-dependencies]
glob = "0.2.11"
assert_cli = "0.5"

[[bin]]
name = "zokrates-cli"
path = "src/bin.rs"