[package]
name = "zokrates_abi"
version = "0.1.1"
authors = ["Thibaut Schaeffer <thibaut@schaeff.fr>"]
edition = "2018"

[dependencies]
zokrates_field = { version = "0.3", path = "../zokrates_field" }
zokrates_core = { version = "0.4", path = "../zokrates_core" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"