[package]
name = "zokrates_analysis"
version = "0.1.3"
edition = "2021"

[features]
default = ["ark", "bellman"]
ark = ["zokrates_ast/ark", "zokrates_embed/ark", "zokrates_common/ark"]
bellman = ["zokrates_ast/bellman", "zokrates_embed/bellman", "zokrates_common/bellman"]

[dependencies]
log = "0.4"
cfg-if = "0.1"
num = { version = "0.1.36", default-features = false }
num-bigint = { version = "0.2", default-features = false }
lazy_static = "1.4"
# serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zokrates_field = { version = "0.5.0", path = "../zokrates_field", default-features = false }
zokrates_pest_ast = { version = "0.3.0", path = "../zokrates_pest_ast" }
zokrates_common = { version = "0.1", path = "../zokrates_common", default-features = false }
zokrates_embed = { version = "0.1.0", path = "../zokrates_embed", default-features = false }
zokrates_ast = { version = "0.1", path = "../zokrates_ast", default-features = false }

[dev-dependencies]
pretty_assertions = "0.6.1"