[package]
name = "zokrates_ark"
version = "0.1.4"
edition = "2021"

[features]
multicore = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-groth16/parallel",
    "ark-gm17/parallel",
    "ark-marlin/parallel",
    "ark-poly/parallel",
    "ark-poly-commit/parallel",
    "ark-crypto-primitives/parallel",
]

[dependencies]
zokrates_field = { version = "0.5", path = "../zokrates_field" }
zokrates_ast = { version = "0.1", path = "../zokrates_ast" }
zokrates_proof_systems = { version = "0.1", path = "../zokrates_proof_systems" }

ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", features = ["curve"], default-features = false }
ark-bls12-377 = { version = "^0.3.0", features = ["curve"], default-features = false }
ark-bw6-761 = { version = "^0.3.0", default-features = false }
ark-gm17 = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["std"] }
ark-relations = { version = "^0.3.0", default-features = false }
ark-marlin = { git = "https://github.com/arkworks-rs/marlin", rev = "63cfd82", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = false }
sha3 = { version = "0.9" }
digest = { version = "0.9" }
rand_0_8 = { version = "0.8", package = "rand" }
hex = "0.4.2"

[dev-dependencies]
zokrates_interpreter = { version = "0.1", path = "../zokrates_interpreter", features = ["ark"] }
zokrates_field = { version = "0.5", path = "../zokrates_field", features = ["bn128", "bls12_377", "bw6_761"] }



