[package]
name = "zokrates_bellperson"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
zokrates_field = { version = "0.5", path = "../zokrates_field", features = ["bellperson_extensions"] }
zokrates_ast = { version = "0.1", path = "../zokrates_ast", features = ["bellperson"] }
# zokrates_proof_systems = { version = "0.1", path = "../zokrates_proof_systems", default-features = false }
bellperson = { package = "bellperson", version = "^0.24", default-features = false }
rand_0_4 = { version = "0.4", package = "rand" }#
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
hex = "0.4.2"
pairing = "0.22"
ff = { version = "0.12.0", default-features = false }
nova-snark = { version = "0.20.3" }
zokrates_interpreter = { version = "0.1", path = "../zokrates_interpreter" }
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
typed-arena = "1.4.1"
rand_0_4 = { version = "0.4", package = "rand" }
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
hex = "0.4.2"
pairing = "0.22"
pasta_curves = { version = "0.5.2", features = ["repr-c", "serde"], package = "fil_pasta_curves"}
zokrates_core = { version = "0.7.3", path = "../zokrates_core" }





