[package]
name = "zokrates_circom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
program_structure = { path = "../../circom/program_structure" }
type_analysis = { path = "../../circom/type_analysis" }
parser = { path = "../../circom/parser" }
