[package]
name = "zokrates_circom"
version = "0.1.4"
edition = "2021"

[features]
bn128 = ["zokrates_field/bn128"]

[dependencies]
zokrates_ast = { version = "0.1", path = "../zokrates_ast" }
zokrates_field = { version = "0.5.0", path = "../zokrates_field" }
byteorder = "1.4.3"

[dev-dependencies]
pretty_assertions = "1.2.1"
zkutil = "0.5.0"
bellman_ce = { version = "^0.3" }