[package]
name = "zokrates_codegen"
version = "0.1.3"
edition = "2021"

[features]
ark = ["zokrates_ast/ark", "zokrates_embed/ark", "zokrates_common/ark", "zokrates_interpreter/ark"]
bellman = ["zokrates_ast/bellman", "zokrates_embed/bellman", "zokrates_common/bellman", "zokrates_interpreter/bellman"]
bellperson = ["zokrates_ast/bellperson", "zokrates_common/bellperson"]

[dependencies]
zokrates_field = { version = "0.5.0", path = "../zokrates_field" }
zokrates_common = { version = "0.1.0", path = "../zokrates_common" }
zokrates_embed = { version = "0.1.0", path = "../zokrates_embed" }
zokrates_interpreter = { version = "0.1", path = "../zokrates_interpreter" }
zokrates_ast = { version = "0.1", path = "../zokrates_ast" }