[package]
name = "zokrates_common"
version = "0.1.3"
authors = ["dark64 <darem966@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bellman", "ark", "bellperson"]
bellman = []
ark = []
bellperson = []


[dependencies]
serde = { version = "1.0", features = ["derive"] }