[package]
name = "zokrates_core"
version = "0.7.6"
edition = "2021"
authors = ["Jacob Eberhardt <jacob.eberhardt@tu-berlin.de>", "Dennis Kuhnert <mail@kyroy.com>"]
repository = "https://github.com/Zokrates/ZoKrates"
readme = "README.md"

[features]
default = ["ark", "bellman", "bellperson"]
ark = ["zokrates_ast/ark", "zokrates_embed/ark", "zokrates_common/ark", "zokrates_interpreter/ark", "zokrates_codegen/ark", "zokrates_analysis/ark"]
bellman = ["zokrates_ast/bellman", "zokrates_embed/bellman", "zokrates_common/bellman", "zokrates_interpreter/bellman", "zokrates_codegen/bellman", "zokrates_analysis/bellman"]
bellperson = ["zokrates_ast/bellperson", "zokrates_common/bellperson"]

[dependencies]
log = "0.4"
cfg-if = "0.1"
num = { version = "0.1.36", default-features = false }
num-bigint = { version = "0.2", default-features = false }
lazy_static = "1.4"
typed-arena = "1.4.1"
# serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zokrates_field = { version = "0.5.0", path = "../zokrates_field", default-features = false }
zokrates_pest_ast = { version = "0.3.0", path = "../zokrates_pest_ast" }
zokrates_common = { version = "0.1", path = "../zokrates_common", default-features = false }
zokrates_embed = { version = "0.1.0", path = "../zokrates_embed", default-features = false }
zokrates_interpreter = { version = "0.1", path = "../zokrates_interpreter", default-features = false }
zokrates_codegen = { version = "0.1", path = "../zokrates_codegen", default-features = false }
zokrates_analysis = { version = "0.1", path = "../zokrates_analysis", default-features = false }
zokrates_ast = { version = "0.1", path = "../zokrates_ast", default-features = false }
