[package]
name = "zokrates_core_test"
version = "0.1.1"
authors = ["schaeff <thibaut@schaeff.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
zokrates_test = { version = "0.1", path = "../zokrates_test" }

[build-dependencies]
fs_extra = "1.1.0"
zokrates_test = { version = "0.1", path = "../zokrates_test" }
