[package]
name = "zokrates_core_test"
version = "0.2.8"
authors = ["schaeff <thibaut@schaeff.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
zokrates_test = { version = "0.2", path = "../zokrates_test" }

[build-dependencies]
zokrates_test_derive = { version = "0.0", path = "../zokrates_test_derive" }
