[package]
name = "zokrates_embed"
version = "0.1.10"
authors = ["schaeff <thibaut@schaeff.fr>"]
edition = "2018"

[features]
default = ["ark", "bellman"]
ark = ["ark-bls12-377", "ark-bw6-761", "ark-gm17", "ark-relations", "ark-crypto-primitives", "ark-r1cs-std", "ark-std", "ark-ec", "ark-ff", "sapling-crypto_ce"]
bellman = ["bellman_ce"]
wasm = ["bellman_ce/nolog", "bellman_ce/wasm", "sapling-crypto_ce/wasm"]
multicore = [
    "bellman_ce/multicore",
    "sapling-crypto_ce/multicore",
    "ark-gm17/parallel",
    "ark-crypto-primitives/parallel",
    "ark-r1cs-std/parallel",
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel"
]

[dependencies]
zokrates_field = { version = "0.5.0", path = "../zokrates_field", default-features = false }
bellman_ce = { version = "^0.3", default-features = false, optional = true }
sapling-crypto_ce = { version = "^0.1", default-features = false, optional = true }
ark-bls12-377 = { version = "^0.3.0", features = ["curve", "r1cs"], default-features = false, optional = true }
ark-bw6-761 = { version = "^0.3.0", default-features = false, optional = true }
ark-gm17 = { version = "^0.3.0", default-features = false, features = ["r1cs"], optional = true }
ark-relations = { version = "^0.3.0", default-features = false, optional = true }
ark-crypto-primitives = { version = "^0.3.0", default-features = false, features = ["r1cs"], optional = true }
ark-r1cs-std = { version = "^0.3.0", default-features = false, optional = true }
ark-std = { version = "^0.3.0", default-features = false, optional = true }
ark-ec = { version = "^0.3.0", default-features = false, optional = true }
ark-ff = { version = "^0.3.0", default-features = false, optional = true}